# modules

./: .analysis_options  .gitignore  BUILD.gn  FLUTTER_VERSION  Makefile  README.md  book.js  dart_dependencies.yaml
agents/: BUILD.gn
agents/content_provider/: BUILD.gn
agents/content_provider/lib/: main.dart
agents/content_provider/lib/src/: api.dart  content_provider_impl.dart
color/: BUILD.gn
color/lib/: main.dart
contact/contact_flutter/: .gitignore  README.md  pubspec.yaml
contact/contact_flutter/android/: AndroidManifest.xml
contact/contact_flutter/lib/: contact_card_screen.dart  contact_list_screen.dart  main.dart
doc/: GLOSSARY.md  README.md  SUMMARY.md
doc/contributing/: README.md  cla.md  code-review.md
doc/hacking/: README.md  dependencies.md  setup.md  workflow.md
doc/style-guides/: README.md  dart.md  documentation.md  makefile.md
doc/testing/: README.md  dart.md  flutter-integration-testing.md  flutter-unit-testing.md
email/: .gitignore  BUILD.gn  Makefile  README.md  config.example.yaml
email/email_flutter/: BUILD.gn  README.md  flutter.yaml  pubspec.yaml
email/email_flutter/android/: AndroidManifest.xml
email/email_flutter/ios/Runner.xcodeproj/: project.pbxproj
email/email_flutter/lib/: email_session_store_direct.dart  embedded_child_builders.dart  main.dart  quarterback.dart
email/email_folder_list/: BUILD.gn
email/email_folder_list/lib/: main.dart
email/email_list/: BUILD.gn  email_list_component.json  pubspec.yaml
email/email_list/lib/: list.dart  main.dart
email/email_list_grid/: BUILD.gn  email_list_grid_component.json
email/email_list_grid/lib/: main.dart
email/email_nav/: BUILD.gn  email_nav_component.json  pubspec.yaml
email/email_nav/lib/: main.dart  menu.dart
email/email_service/: BUILD.gn  email.fidl  flutter.yaml  labels.fidl  pubspec.yaml  threads.fidl  users.fidl
email/email_service/lib/: api.dart  fidls.dart  impls.dart  main.dart
email/email_service/lib/src/: api.dart  email_impl.dart  threads_impl.dart
email/email_service/lib/src/api/: client.dart
email/email_service/test/: email_test.dart
email/email_session/: BUILD.gn  email_session.fidl  pubspec.yaml
email/email_session/lib/: client.dart  email_session_store.dart  main.dart
email/email_session/lib/src/: email_session_doc.dart  email_session_impl.dart  email_session_link_store.dart  email_session_module.dart  link_object_cache.dart
email/email_story/: BUILD.gn  email_story_component.json
email/email_story/lib/: main.dart
email/email_thread/: BUILD.gn  pubspec.yaml
email/email_thread/lib/: main.dart  thread.dart
email/interactive_receipt/: BUILD.gn  interactive_receipt_component.json
email/interactive_receipt/lib/: main.dart
email/interactive_receipt_http/: BUILD.gn  interactive_receipt_http_component.json
email/interactive_receipt_http/lib/: main.dart
email/map/: BUILD.gn  flutter.yaml  map_component.json  pubspec.yaml
email/map/lib/: main.dart
email/music_story/: BUILD.gn  music_story_component.json
email/music_story/lib/: main.dart
email/service/: BUILD.gn  pubspec.yaml
email/service/lib/: api.dart
email/service/test/: email_test.dart
email/services/: BUILD.gn
email/tools/: pubspec.yaml
email/tools/lib/: config.dart  resolve.dart
email/user_shell/: BUILD.gn  email_user_shell.cc
email/usps/: BUILD.gn  flutter.yaml  pubspec.yaml  usps_component.json
email/usps/lib/: main.dart
email/youtube_related_videos/: BUILD.gn  flutter.yaml  pubspec.yaml
email/youtube_related_videos/lib/: main.dart
email/youtube_story/: BUILD.gn  youtube_story_component.json
email/youtube_story/lib/: main.dart
email/youtube_thumbnail/: BUILD.gn
email/youtube_thumbnail/lib/: main.dart
email/youtube_video/: BUILD.gn  flutter.yaml  pubspec.yaml  youtube_video_component.json
email/youtube_video/lib/: main.dart
gallery/: .gitignore  BUILD.gn  flutter.yaml  pubspec.yaml
gallery/android/: AndroidManifest.xml
gallery/ios/Runner/: Info.plist
gallery/lib/: app.dart  main.dart  routes.dart
gallery/lib/flux/: gallery.dart
gallery/lib/gallery/: collection.dart  drawer.dart  embedded_child_builders.dart  groups.dart  home.dart  item.dart
gallery/lib/screens/: flux_gallery.dart  index.dart
gallery/lib/screens/common/: error.dart  widgets_gallery.dart
gallery/lib/screens/contact/: contact_card.dart  contact_details.dart
gallery/lib/screens/dummy/: dummy.dart
gallery/lib/screens/email/: editor.dart  inbox.dart  menu.dart  quarterback.dart  thread.dart
gallery/lib/screens/map/: static_map.dart
gallery/lib/screens/usps/: tracking_status.dart
gallery/lib/screens/youtube/: player.dart  thumbnail.dart
gallery/lib/src/: config.dart  config.example.dart
gallery/lib/src/widget_specs/: typedefs.dart  utils.dart
infra/config/: cq.cfg  recipes.cfg
infra/recipes/: modules.py
infra/recipes/modules.expected/: basic.json  cq.json
modules/: BUILD.gn
modules/email/: BUILD.gn  pubspec.yaml
modules/email/lib/: main.dart  modular_main.dart
modules/email/lib/src/: app.dart  widgets.dart
modules/email/lib/src/widgets/: home_page.dart
modules/nav/: BUILD.gn
modules/nav/lib/: main.dart
modules/service/: BUILD.gn  email_service_component.json  pubspec.yaml
modules/service/lib/: main.dart
modules/service/lib/src/: api.dart  email_impl.dart
modules/session/: BUILD.gn  email_session_component.json
modules/session/lib/: client.dart  main.dart
modules/story/: BUILD.gn  email_story_component.json  pubspec.yaml
modules/story/android/: AndroidManifest.xml
modules/story/lib/: main.dart  modular_main.dart  quarterback.dart
modules/thread/: BUILD.gn  email_thread_component.json
modules/thread/lib/: main.dart
modules/thread_list/: BUILD.gn  email_thread_list_component.json
modules/thread_list/lib/: main.dart
services/: BUILD.gn  email_content_provider.fidl
tools/: build.sh  copyright_check.sh  merge_coverage.sh  run.sh  run_dart_tests.py  update.sh
tools/common/: Makefile  build.sh  run.sh
tools/dartfmt_extras/: pubspec.yaml
tools/widget_specs/: pubspec.yaml
(+19 files in other folders)
