# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("modules") {
  deps = [
    "//apps/modules/color",
    "//apps/modules/email",
  ]
}

group("test") {
  testonly = true

  deps = [
    "//apps/modules/packages/email_api/test",
    "//apps/modules/packages/fixtures/test",
    "//apps/modules/packages/models/test",
    "//apps/modules/packages/util/test",
    "//apps/modules/packages/widgets/test",
  ]
}
