# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("email") {
  deps = [
    "//apps/modules/email/email_list",
    "//apps/modules/email/email_list_grid",
    "//apps/modules/email/email_nav",
    "//apps/modules/email/email_service",
    "//apps/modules/email/email_session",
    "//apps/modules/email/email_story",
    "//apps/modules/email/email_thread",
    "//apps/modules/email/interactive_receipt",
    "//apps/modules/email/user_shell:email_user_shell",
    "//apps/modules/email/youtube_story",
    "//apps/modules/email/youtube_thumbnail",
    "//apps/modules/email/youtube_video",
  ]
}
