# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("email") {
  deps = [
    "email_list",
    "email_list_grid",
    "email_nav",
    "email_service:email_service_app",
    "email_session:email_session_app",
    "email_story",
    "email_thread",
    "interactive_receipt",
    "interactive_receipt_http",
    "map",
    "music_story",
    "services",
    "user_shell:email_user_shell",
    "usps",
    "youtube_related_videos",
    "youtube_story",
    "youtube_thumbnail",
    "youtube_video",
  ]
}
