# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_package.gni")
import("//flutter/build/flutter_app.gni")

dart_package("gallery") {
  package_name = "gallery"

  source_dir = "lib"

  deps = [
    "//lib/flutter/packages/flutter",
    "//modules/packages/auth",
    "//modules/packages/clients",
    "//modules/packages/models",
    "//modules/packages/util",
    "//modules/packages/widgets",
  ]
}

flutter_app("modules_gallery") {
  main_dart = "lib/main.dart"

  package_name = "gallery"

  source_dir = "lib"

  deps = [
    "//lib/flutter/packages/flutter",
    "//modules/packages/auth",
    "//modules/packages/clients",
    "//modules/packages/models",
    "//modules/packages/util",
    "//modules/packages/widgets",
  ]
}
