# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_package.gni")
import("//flutter/build/flutter_app.gni")

dart_package("gallery") {
  package_name = "gallery"

  source_dir = "lib"

  deps = [
    "//apps/modules/packages/clients",
    "//apps/modules/packages/models",
    "//apps/modules/packages/util",
    "//apps/modules/packages/widgets",
    "//lib/flutter/packages/flutter",
    "//third_party/dart-pkg/pub/flutter_flux",
  ]

  analysis_options = "//apps/modules/.analysis_options"
}

flutter_app("modules_gallery") {
  main_dart = "lib/main.dart"

  package_name = "gallery"

  manifest = "flutter.yaml"

  source_dir = "lib"

  deps = [
    "//apps/modules/packages/clients",
    "//apps/modules/packages/models",
    "//apps/modules/packages/util",
    "//apps/modules/packages/widgets",
    "//lib/flutter/packages/flutter",
    "//third_party/dart-pkg/pub/flutter_flux",
  ]

  analysis_options = "//apps/modules/.analysis_options"
}
