# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//lib/fidl/fidl.gni")

fidl("services") {
  sources = [
    "email_service.fidl",
    "email_session.fidl",
    "email_content_provider.fidl",
  ]
}
