# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_package.gni")
import("//flutter/build/flutter_app.gni")

dart_package("email_flutter") {
  package_name = "email_flutter"

  source_dir = "lib"

  deps = [
    "//apps/modules/packages/config_flutter",
    "//apps/modules/packages/email_session_store",
    "//apps/modules/packages/clients",
    "//apps/modules/packages/widgets",
    "//lib/flutter/packages/flutter",
  ]

  analysis_options = "//apps/modules/.analysis_options"
}
