# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_package.gni")

dart_package("email_service") {
  package_name = "email_service"

  source_dir = "lib"

  deps = [
    "//apps/modular/lib/app/dart",
    "//apps/modular/services/application:application_dart",
    "//apps/modular/services/story:story_dart",
    "//apps/mozart/lib/flutter",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
    "//third_party/dart-pkg/pub/googleapis",
    "//third_party/dart-pkg/pub/googleapis_auth",
  ]
}
