# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/build/flutter_app.gni")
import("//lib/fidl/fidl.gni")

flutter_app("email_service") {
  package_name = "email_service"

  source_dir = "lib"

  main_dart = "lib/main.dart"

  manifest = "flutter.yaml"

  deps = [
    "//apps/modular/lib/app/dart",
    "//apps/modular/services/application:application_dart",
    "//apps/modular/services/story:story_dart",
    "//apps/modules/email/email_service:interfaces_dart",
    "//apps/modules/packages/email_api",
    "//apps/modules/packages/models",
    "//apps/mozart/lib/flutter",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
  ]
}

fidl("interfaces") {
  sources = [
    "labels.fidl",
    "threads.fidl",
    "users.fidl",
  ]
}
