# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/component/component.gni")
import("//flutter/build/flutter_app.gni")

flutter_app("email_service_app") {
  package_name = "email_service"

  source_dir = "lib"

  main_dart = "lib/main.dart"

  manifest = "pubspec.yaml"

  deps = [
    "//apps/modular/lib/app/dart",
    "//apps/modular/services/application:application_dart",
    "//apps/modular/services/story:story_dart",
    "//apps/modules/email/services:services_dart",
    "//apps/modules/packages/email_api",
    "//apps/modules/packages/fixtures",
    "//apps/modules/packages/models",
    "//apps/mozart/lib/flutter",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
  ]

  analysis_options = "//apps/modules/.analysis_options"
}

fuchsia_component("email_service_component") {
  manifest = "email_service_component.json"
  flutter_program = ":email_service_app"
}
