# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/build/flutter_app.gni")

flutter_app("email_session") {
  package_name = "email_session"

  source_dir = "lib"
  main_dart = "lib/main.dart"

  deps = [

    "//apps/modular/services/application:application_dart",
    "//apps/modular/services/story:story_dart",
    "//apps/modules/packages/email_session_api",
    "//apps/modules/packages/models",
    "//apps/mozart/lib/flutter",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
    "//third_party/dart-pkg/pub/googleapis",
  ]
}
