# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/component/component.gni")
import("//build/dart/dart_package.gni")
import("//flutter/build/flutter_app.gni")

dart_package("client") {
  package_name = "email_session_client"

  source_dir = "lib"

  deps = [
    "//application/lib/app/dart",
    "//application/services:services_dart",
    "//apps/modular/services/story:story_dart",
    "//apps/modules/email/services:services_dart",
    "//apps/modules/packages/email_session_store",
    "//apps/modules/packages/fixtures",
    "//apps/modules/packages/models",
    "//apps/mozart/lib/flutter",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
    "//third_party/dart-pkg/pub/flutter_flux",
    "//third_party/dart-pkg/pub/googleapis",
  ]

  analysis_options = "//apps/modules/.analysis_options"
}

flutter_app("email_session_app") {
  package_name = "email_session"

  source_dir = "lib"
  main_dart = "lib/main.dart"

  deps = [
    "//apps/modules/email/email_session:client",
  ]

  analysis_options = "//apps/modules/.analysis_options"
}

fuchsia_component("email_session_component") {
  manifest = "email_session_component.json"
  flutter_program = ":email_session_app"
}
