# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/build/flutter_app.gni")

flutter_app("interactive_receipt_http") {
  main_dart = "lib/main.dart"

  deps = [
    "//apps/modular/lib/app/dart",
    "//apps/modular/services/application:application_dart",
    "//apps/modular/services/story:story_dart",
    "//apps/modules/packages/widgets",
    "//apps/mozart/lib/flutter",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
  ]
}
