# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("all") {
  deps = [
    ":email_user_shell",
  ]
}

executable("email_user_shell") {
  sources = [
    "email_user_shell.cc",
  ]

  deps = [
    "//apps/maxwell/services/suggestion",
    "//apps/modular/lib/fidl:array_to_string",
    "//apps/modular/lib/fidl:single_service_view_app",
    "//apps/modular/lib/fidl:strong_binding",
    "//apps/modular/services/user",
    "//apps/mozart/lib/view_framework",
    "//apps/mozart/services/views",
    "//lib/fidl/cpp/bindings",
    "//lib/ftl",
    "//lib/mtl",
    "//lib/mtl/tasks",
  ]
}
