# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//flutter/build/flutter_app.gni")

flutter_app("email") {
  main_dart = "lib/modular_main.dart"

  source_dir = "lib"

  deps = [
    "//application/lib/app/dart",
    "//apps/modular/services/story:story_dart",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
  ]

  analysis_options = "//apps/email/.analysis_options"
}
