# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/component/component.gni")
import("//build/dart/dart_package.gni")
import("//flutter/build/flutter_app.gni")

flutter_app("story") {
  main_dart = "lib/modular_main.dart"

  source_dir = "lib"

  deps = [
    "//application/lib/app/dart",
    "//application/services:services_dart",
    "//apps/modular/services/module:module_dart",
    "//apps/modular/services/story:story_dart",
    "//apps/modules/common/packages/models",
    "//apps/modules/common/packages/widgets",
    "//apps/modules/email/packages/email_session_store",
    "//apps/mozart/lib/flutter",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
  ]

  analysis_options = "//apps/modules/common/.analysis_options"
}

# Used by sysUI
# TODO(jasoncampbell): remove/restructure this.
dart_package("email_story") {
  package_name = "email_story"
  source_dir = "lib"

  deps = [
    "//application/lib/app/dart",
    "//application/services:services_dart",
    "//apps/modular/services/module:module_dart",
    "//apps/modular/services/story:story_dart",
    "//apps/modules/common/packages/models",
    "//apps/modules/common/packages/widgets",
    "//apps/modules/email/packages/email_session_store",
    "//apps/mozart/lib/flutter",
    "//apps/mozart/services/views:views_dart",
    "//lib/fidl/dart",
    "//lib/flutter/packages/flutter",
  ]

  analysis_options = "//apps/modules/common/.analysis_options"
}

fuchsia_component("email_story_component") {
  manifest = "email_story_component.json"
  flutter_program = ":story"
}
